force-app/main/default/objects/Fatura__c/fields/Data_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Pagamento__c</fullName>
    <label>Data de Pagamento</label>
    <type>Date</type>
</CustomField>