force-app/main/default/objects/Fatura__c/fields/Dias_de_Atraso__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_Atraso__c</fullName>
    <label>Dias de Atraso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>