force-app/main/default/objects/Fatura__c/fields/Recebido__c.field-meta.xml
<CustomField>
    <fullName>Recebido__c</fullName>
    <label>Recebido</label>
    <type>DateTime</type>
</CustomField>