force-app/main/default/objects/Fatura__c/fields/Valor_de_Juros__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Juros__c</fullName>
    <label>Valor de Juros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>